# CAI_nav_test_tool

./: README.md  requirements.txt
drl_nav_tool/: README.md
drl_nav_tool/drl_nav/: README.md
drl_nav_tool/drl_nav/utils/helper/: CMakeLists.txt  README.md  create_config_file.py  node.py  package.xml  pose_to_odom.py  scenario_police.py
drl_nav_tool/drl_nav/utils/helper/tmp/: config.rviz
drl_nav_tool/drl_nav/utils/manager/: CMakeLists.txt  Map_manager.py  Obstacle_manager.py  README.md  Robot_manager.py  map_distance_node.py  observation_manager.py  package.xml
drl_nav_tool/drl_nav/utils/robohumstamap/: CMakeLists.txt  package.xml
drl_nav_tool/drl_nav/utils/robohumstamap/human_type/: Base_human.py  Human_tree.py  ORCA_human.py  Ped_human.py  README.md  Random_human.py
drl_nav_tool/drl_nav/utils/robohumstamap/human_type/config/: README.md
drl_nav_tool/drl_nav/utils/robohumstamap/human_type/config/ped_config/: person_two_legged.model.yaml
drl_nav_tool/drl_nav/utils/robohumstamap/map_type/: README.md
drl_nav_tool/drl_nav/utils/robohumstamap/map_type/erica_univ/: map.world.yaml
drl_nav_tool/drl_nav/utils/robohumstamap/robot_type/burger/: burger.model.yaml  model_params.yaml
drl_nav_tool/drl_nav/utils/robohumstamap/robot_type/burger/costmaps/: dwa_local_planner_params.yaml
drl_nav_tool/drl_nav/utils/robohumstamap/robot_type/burger/urdf/: burger.urdf.xacro
drl_nav_tool/drl_nav/utils/robohumstamap/static_obs_type/: Base_static.py  Flatland_static_obs.py  Ped_static_obs.py  Static_tree.py
drl_nav_tool/drl_nav/utils/robohumstamap/static_obs_type/config/ped_config/: chair.model.yaml  long_shelf.model.yaml  shelf.yaml
drl_nav_tool/drl_nav/utils/task_generator/: CMakeLists.txt  package.xml  simulator_tree.py  task_generator_node.py
drl_nav_tool/drl_nav/utils/task_generator/scenario/: eval_outdoor_obs20.json
drl_nav_tool/drl_nav/utils/task_generator/task_type/: README.md  base_task.py  random_task.py  scenario_task.py  task_tree.py
evaluation/: create_plots.py  get_metrics.py  utils.py
(+114 files in other folders)
